data/derived/fa15/progs/unify/prog0096.ml.out
Characters 44-51:
  let rec clone x n = if n = 1 then []@x else clone x@x n-1;;
                                              ^^^^^^^
Error: This expression has type int -> 'a list
       but an expression was expected of type 'b list
